--- a/post.hbs
+++ b/post.hbs
@@ -9,10 +9,11 @@
     <div class="overlay" id="overlay">
         {{navigation}}
     </div>
-
-    <section class="banner" role="banner">
-        <h1><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
-    </section>
+    
+    <div class="button_container_home">
+    &#x21e6;
+    </div>
+    
 </header>
 
     <div class="post-wrapper">
