--- a/post.hbs
+++ b/post.hbs
@@ -1,5 +1,5 @@
 {{!< default}} 
-<header>
+    <header>
     <div class="button_container" id="toggle">
         <span class="top"></span>
         <span class="middle"></span>
@@ -9,25 +9,30 @@
     <div class="overlay" id="overlay">
         {{navigation}}
     </div>
-    
-    <div class="button_container_home">
-    &#x21e6;
-    </div>
-    
-</header>
+    </header>
 
     <div class="post-wrapper">
-        {{#post}} 
-        {{#if image}}<img class="cover-img" src="{{image}}">{{/if}}
+        {{#post}} {{#if image}}<img class="cover-img" src="{{image}}">{{/if}}
         <h1>{{title}}</h1>
         <div class="post-date">{{date format="MMMM DD, YYYY"}}{{#if tags}} // {{tags separator=", " prefix="Tagged in: "}}{{/if}}</div>
 
-        {{content}}
-        
+        {{content}} {{#is "post"}}
+        <div class="box">
+            {{#author}}
+            <img class="author" src="{{image}}"> {{/author}}
+            <div class="more-posts">
+                <h3 class="moreit">More Posts</h3> {{#prev_post}}
+                <p>Prev:&nbsp;
+                    <a href="{{url}}">{{title}}</a></p>
+                {{/prev_post}} {{#next_post}}
+                <p>Next:&nbsp;
+                    <a href="{{url}}">{{title}}</a></p>
+                {{/next_post}}
+            </div>
+        </div>
         <hr />
-        
         <div id="disqus_thread"></div>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+        {{/is }}
     </div>
     {{/post}}
-
