--- a/default.hbs
+++ b/default.hbs
@@ -14,8 +14,8 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700" >
 
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{asset "img/apple-touch-icon-precomposed.png"}}">
-    <link rel="shortcut icon" href="{{asset "img/favicon.png"}}">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{@blog.logo}}">
+    <link rel="shortcut icon" href="{{@blog.logo}}">
     
     {{ghost_head}}
 
