--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
  h4,
  h5,
  h6 {
-     font-family: Lora, Helvetica, Arial, sans-serif;
+     font-family: Lora, sans-serif;
  }
  a {
      background-color: transparent;
