--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,7 +450,7 @@
  }
  .post-wrapper img {
      width: 110%;
-     margin: -20px 0 20px -40px;
+     margin: 10px 0 0 -40px;
  }
  .index-wrapper section#timeline article div.inner p {
      padding: 5px 20px 15px;
