--- a/default.hbs
+++ b/default.hbs
@@ -21,22 +21,23 @@
 
 </head>
 <body style="background:url('{{@blog.cover}}');background-size:cover;background-attachment:fixed;">
-    
+    <div class="container">
     {{{body}}}
 
     <footer>
         Theme by <a href="https://github.com/Dennis-Mayk/Practice/">Dennis</a> // Logo by <a href="https://thenounproject.com/mockturtle/">Sergey Demushkin</a>
     </footer>
-    
+    </div>
     {{ghost_footer}}
     
-    <script src="{{asset "js/jquery.min.js"}}"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
-        $('#toggle').click(function() {
-            $(this).toggleClass('active');
-            $('#overlay').toggleClass('open');
-        });
-
+        $(document).ready(function(){
+  $('.bars').click(function(){
+    $('#nav').toggleClass('open');
+    $('.container').toggleClass('menu-open');
+  });
+});
     </script>
     <script>
     (function() {  // DON'T EDIT BELOW THIS LINE
