--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,6 @@
- body,
- h1,
- h2,
- h3,
- h4,
- h5,
- h6 {
+ body {
      font-family: Lora, sans-serif;
+     background: #2c3e50;
  }
  a {
      background-color: transparent;
@@ -122,32 +117,31 @@
  button {
      display: inline-block
  }
-
-header #nav {
-  height: 50px;
-  text-align: center;
-  margin: 0;
-  padding: 25px 0 0;
-}
-header #nav li {
-  display: inline-block;
-}
-header #nav li a {
-  display: block;
-  color: #fff;
-  font-size: 18px;
-  padding: 10px 25px;
-  border: 2px solid transparent;
-  text-decoration: none;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
-header #nav li a:hover {
-  border: 2px solid #fff;
-    border-radius: 5px;
-}
+ header #nav {
+     height: 50px;
+     text-align: center;
+     margin: 0;
+     padding: 25px 0 0;
+ }
+ header #nav li {
+     display: inline-block;
+ }
+ header #nav li a {
+     display: block;
+     color: #fff;
+     font-size: 18px;
+     padding: 10px 25px;
+     border: 2px solid transparent;
+     text-decoration: none;
+     -webkit-transition: all 0.3s;
+     -moz-transition: all 0.3s;
+     -o-transition: all 0.3s;
+     transition: all 0.3s;
+ }
+ header #nav li a:hover {
+     border: 2px solid #fff;
+     border-radius: 5px;
+ }
  header {
      color: #3A4145;
      position: relative;
@@ -228,141 +222,10 @@ header #nav li a:hover {
  .button_container span:nth-of-type(3) {
      top: 20px
  }
- .overlay {
-     position: fixed;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     line-height: 2.5em;
-     opacity: 1;
-     visibility: hidden;
-     -webkit-transition: opacity .35s, visibility .35s, width .35s;
-     transition: opacity .35s, visibility .35s, width .35s;
-     z-index: 100
- }
- .overlay:after,
- .overlay:before {
-     background: #3A4145;
-     top: 0;
-     width: 50%;
-     position: absolute;
-     height: 100%;
-     content: ''
- }
- .overlay:before {
-     left: -55%;
-     -webkit-transition: left .35s ease;
-     transition: left .35s ease
- }
- .overlay:after {
-     right: -55%;
-     -webkit-transition: all .35s ease;
-     transition: all .35s ease
- }
- .overlay.open {
-     opacity: .99;
-     visibility: visible;
-     height: 100%
- }
- .overlay.open:before {
-     left: 0
- }
- .overlay.open:after {
-     right: 0
- }
- .overlay.open li {
-     -webkit-animation: fadeInRight .5s ease forwards;
-     animation: fadeInRight .5s ease forwards;
-     -webkit-animation-delay: .35s;
-     animation-delay: .35s
- }
- .overlay.open li:nth-of-type(2) {
-     -webkit-animation-delay: .45s;
-     animation-delay: .45s
- }
- .overlay.open li:nth-of-type(3) {
-     -webkit-animation-delay: .55s;
-     animation-delay: .55s
- }
- .overlay.open li:nth-of-type(4) {
-     -webkit-animation-delay: .65s;
-     animation-delay: .65s
- }
- .overlay nav {
-     position: relative;
-     height: 70%;
-     top: 50%;
-     -webkit-transform: translateY(-50%);
-     transform: translateY(-50%);
-     font-size: 50px;
-     font-weight: 400;
-     z-index: 100;
- }
- .overlay ul {
-     list-style: none;
-     padding: 0;
-     margin: 0 auto;
-     position: relative;
-     height: 100%
- }
- .overlay ul li {
-     display: block;
-     height: 25%;
-     height: calc(100% / 4);
-     min-height: 50px;
-     position: relative;
-     opacity: 0
- }
- .overlay ul li a {
-     display: block;
-     position: relative;
-     line-height: 1.2em;
-     color: #FFF;
-     overflow: hidden
- }
- .overlay ul li a:active:after,
- .overlay ul li a:focus:after,
- .overlay ul li a:hover:after {
-     width: 100%
- }
- .overlay ul li a:after {
-     content: '';
-     position: absolute;
-     bottom: 0;
-     left: 50%;
-     width: 0;
-     -webkit-transform: translateX(-50%);
-     transform: translateX(-50%);
-     height: 3px;
-     background: #FFF;
-     -webkit-transition: .35s;
-     transition: .35s
- }
  .index-wrapper section#timeline article div.inner,
  .pagination {
      overflow: hidden;
      transition: all .3s cubic-bezier(.25, .8, .25, 1)
- }
- @-webkit-keyframes fadeInRight {
-     0% {
-         opacity: 0;
-         left: 20%
-     }
-     100% {
-         opacity: 1;
-         left: 0
-     }
- }
- @keyframes fadeInRight {
-     0% {
-         opacity: 0;
-         left: 20%
-     }
-     100% {
-         opacity: 1;
-         left: 0
-     }
  }
  .post-wrapper {
      margin: 6% auto 0;
