--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,9 +1,3 @@
 <nav class="pagination" role="pagination">
-    {{#if next}}
-    <a class="newer-posts" href="{{page_url next}}">&#8249;</a> 
-    {{/if}}
-    <span class="page-number">Page {{page}} of {{pages}}</span> 
-    {{#if prev}}
-    <a class="older-posts" href="{{page_url prev}}">&#8250;</a> 
-    {{/if}}
+    <span class="page-number" id=#load-more>Load more</span> 
 </nav>
