--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -2,7 +2,7 @@
 
         <section id="timeline">
             {{#foreach posts}}
-            <article>
+            <article class="article">
 
                 <div class="inner">
                     <span class="date">
