--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,3 +1,8 @@
 <nav class="pagination" role="pagination">
-    <span class="page-number" id=#load-more>Load more</span> 
+    <a href="#" id="loadMore">Load More</a>
 </nav>
+
+
+<p class="totop"> 
+    <a href="#top">Back to top</a> 
+</p>
