--- a/default.hbs
+++ b/default.hbs
@@ -24,6 +24,9 @@
     
     {{{body}}}
 
+    <p class="totop"> 
+    <a href="#top">Back to top</a> 
+</p>
     <footer>
         Theme by <a href="https://github.com/Dennis-Mayk/Practice/">Dennis</a> // Logo by <a href="https://thenounproject.com/mockturtle/">Sergey Demushkin</a>
     </footer>
