--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,6 +374,7 @@
      border-radius: 5px;
      padding: 15px;
      color: rgba(0, 0, 0, .5);
+     max-width: 150px;
  }
  .pagination a {
      display: inline-block;
