--- a/default.hbs
+++ b/default.hbs
@@ -21,51 +21,20 @@
     {{ghost_head}}
 
 </head>
-<body style="background:url('{{@blog.cover}}');background-size:cover;background-attachment:fixed;">
+    <body style="background:url('{{@blog.cover}}');background-size:cover;background-attachment:fixed;">
     
-    {{{body}}}
+        {{{body}}}
 
-    <footer>
-        Theme by <a href="https://github.com/Dennis-Mayk/Practice/">Dennis</a> // Logo by <a href="https://thenounproject.com/mockturtle/">Sergey Demushkin</a>
-    </footer>
-    {{ghost_footer}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="{{asset "subbscribe.min.js"}}"></script>
-	<script>
-
-		$('body').subbscribe({
-					list	  	: "MailChimp",
-    			url 	  	: "//1bytebeta.us9.list-manage.com/subscribe/post?u=1c261e60d8259c0c636801494&id=7fa99bf359",
-					name      : "<a href='https://twitter.com/shlominissan' target='_blank'>@shlominissan</a>",
-        	thumbnail : "https://s3-ap-southeast-2.amazonaws.com/subbscribe/img/shlomi.jpg",
-          color     : "#F2545B",
-					delay			: 3,
-		});
-
-	</script>
-    <script>
-    $(function () {
-    $("article").slice(0, 4).show();
-    $("#loadMore").on('click', function (e) {
-        e.preventDefault();
-        $("article:hidden").slice(0, 4).slideDown();
-        if ($("article:hidden").length == 0) {
-            $("#load").fadeOut('slow');
-        }
-    });
-});
-    </script>
-    <script>
-    (function() {  // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        
-        s.src = '//tilligettherecom.disqus.com/embed.js';
-        
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
-    </script>
-
-</body>
+        <footer>
+            Theme by <a href="https://github.com/Dennis-Mayk/Practice/">Dennis</a> // Logo by <a href="https://thenounproject.com/mockturtle/">Sergey Demushkin</a>
+        </footer>
+    
+        {{ghost_footer}}
+    
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+        <script src="{{asset "subbscribe.min.js"}}"></script>
+        <script src="{{asset "index.js"}}"></script>
+    
+    </body>
 
 </html>
