--- a/default.hbs
+++ b/default.hbs
@@ -32,8 +32,8 @@
         {{ghost_footer}}
     
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script src="{{asset "subbscribe.min.js"}}"></script>
-        <script src="{{asset "index.js"}}"></script>
+        <script src="{{asset "js/subbscribe.min.js"}}"></script>
+        <script src="{{asset "js/index.js"}}"></script>
     
     </body>
 
